--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cs123_itemtracker">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".MyRealmApp_"
@@ -15,30 +20,41 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".ItemMapsActivity_"
+            android:label="@string/title_activity_item_maps"></activity>
         <activity
             android:name=".CategoryActivity_"
-            android:label="@string/title_activity_category">
-        </activity>
+            android:label="@string/title_activity_category"></activity>
         <activity
             android:name=".DrawerActivity"
-            android:label="@string/title_activity_category">
-        </activity>
+            android:label="@string/title_activity_category"></activity>
         <activity
             android:name=".ViewItem_"
-            android:label="@string/title_activity_viewItem">
-        </activity>
+            android:label="@string/title_activity_viewItem"></activity>
         <activity
             android:name=".AddItemActivity_"
-            android:label="@string/title_activity_addItem">
-        </activity>
+            android:label="@string/title_activity_addItem"></activity>
         <activity
             android:name=".ImageActivity_"
-            android:label="@string/title_activity_category">
-        </activity>
+            android:label="@string/title_activity_image"></activity>
         <activity
             android:name=".AddCategoryActivity_"
-            android:label="@string/title_activity_category">
-        </activity>
+            android:label="@string/title_activity_category"></activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.cs123_itemtracker"
@@ -49,11 +65,8 @@
                 android:resource="@xml/file_provider_path" />
         </provider>
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
-        <activity android:name=".MainActivity_"
+        <activity
+            android:name=".MainActivity_"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
